--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -3,7 +3,7 @@
     <div class="flex flex-col justify-center w-full">
       <form class="p-3" phx-submit="search">
         <div class="pt-2 relative mx-auto w-full">
-          <input class="border-2 border-gray-300 text-gray-400 placeholder-gray-400 bg-white h-10 px-5 pr-16 rounded-lg w-full ring-0 focus:ring-0"
+          <input class="border-2 border-gray-300 text-gray-400 placeholder-gray-400 bg-white h-10 px-5 pr-16 rounded-lg w-full focus:border-yellow-800 focus:outline-none focus:ring-0"
             type="search"
             name="brand"
             aria-label="Brand name"
