--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -1,52 +1,58 @@
-<div class="flex items-center justify-center">
-  <h1 class="text-orange-900 text-4xl font-bold text-center m-4"><%= gettext "Blends" %></h1>
-</div>
 <div class="mt-10 justify-center">
   <div class="flex flex-col items-center justify-center m-5">
-      <form class="max-w-sm w-full" phx-submit="search">
-      <div class="pt-2 relative mx-auto text-gray-600 w-full">
-          <input class="border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none w-full"
+    <div class="flex flex-col justify-center w-full">
+      <form class="p-3" phx-submit="search">
+        <div class="pt-2 relative mx-auto w-full">
+          <input class="border-2 border-gray-300 text-gray-400 placeholder-gray-400 bg-white h-10 px-5 pr-16 rounded-lg w-full focus:border-yellow-800 focus:outline-none focus:ring-0"
             type="search"
             name="brand"
             aria-label="Brand name"
             value="<%= @filter.search_text %>"
             placeholder="<%= gettext "Search by Blend or Brand" %>">
-          <button type="submit" class="absolute right-0 top-0 mt-5 mr-4">
-            <svg class="text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+          <button type="submit" class="absolute right-0 top-0 mt-5 mr-4 text-gray-300">
+            <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
               viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
               width="512px" height="512px">
-              <path
-                d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+              <path d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
             </svg>
           </button>
         </div>
       </form>
-    <div class="flex flex-row items-center justify-center z-40">
-      <%= render_filter_options(@socket, @blend_types, gettext("Blend Type"), "blend_type_ids", @filter) %>
-      <%= render_filter_options(@socket, @countries, gettext("Country"), "countries", @filter, "locale") %>
-      <%= render_filter_options(@socket, @cuts, gettext("Cut"), "cut_ids", @filter) %>
+      <div class="flex flex-wrap-mx-3 mb-2 z-40">
+        <%= render_filter_options(@socket, @blend_types, gettext("Blend Type"), "blend_type_ids", @filter) %>
+        <%= render_filter_options(@socket, @countries, gettext("Country"), "country_ids", @filter) %>
+        <%= render_filter_options(@socket, @cuts, gettext("Cut"), "cut_ids", @filter) %>
+      </div>
+      <div class="mt-4 px-3 flex flex-wrap space-x-2">
+        <%= for item <- @selected_filters do %>
+          <div class="flex items-center rounded-full border-2 px-1 w-auto bg-gray-200 text-gray-500 text-xs font-semibold">
+            <span class=""><%= item.name %></span>
+            <div phx-click="uncheck_filter" phx-value-id="<%= item.id %>" phx-value-struct="<%= item.__struct__ %>">
+              <svg class="h-5 w-5 ml-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd" />
+              </svg>
+            </div>
+          </div>
+        <% end %>
+      </div>
+      <div class="inline-block m-3 mt-6 shadow rounded-lg overflow-hidden">
+        <table class="w-full">
+          <tbody>
+            <%= for blend <- @blends do %>
+              <tr class="hover:bg-orange-100">
+                <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
+                  <%= link(blend.name, to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Show, blend.brand.slug, blend.id)) %>
+                </td>
+                <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
+                  <span><%= link "Edit", to: "#" %></span>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <%= render_pagination_navigation(@socket, @pagination_info, TobaccosClubWeb.BlendsLive.Index) %>
     </div>
   </div>
-
-  <%= render_pagination_navigation(@socket, @pagination_info, TobaccosClubWeb.BlendsLive.Index) %>
-
-  <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
-    <table class="w-full">
-      <tbody>
-        <%= for blend <- @blends do %>
-          <tr class="hover:bg-orange-100">
-            <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
-              <%= link(blend.name, to: Routes.live_path(@socket, TobaccosClubWeb.BlendsLive.Show, blend.brand.slug, blend.id)) %>
-            </td>
-            <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
-              <span><%= link "Edit", to: "#" %></span>
-            </td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
-
-  <%= render_pagination_navigation(@socket, @pagination_info, TobaccosClubWeb.BlendsLive.Index) %>
 </div>
