--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -24,7 +24,7 @@
         <%= render_filter_options(@socket, @countries, gettext("Country"), "country_ids", @filter) %>
         <%= render_filter_options(@socket, @cuts, gettext("Cut"), "cut_ids", @filter) %>
       </div>
-      <div class="mt-4 px-3 flex flex-wrap space-x-2">
+      <div class="mt-4 px-3 flex flex-wrap space-x-2 space-y-1">
         <%= for item <- @selected_filters do %>
           <div class="flex items-center rounded-full border-2 px-1 w-auto bg-gray-200 text-gray-500 text-xs font-semibold">
             <span class=""><%= item.name %></span>
