--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -19,7 +19,7 @@
           </button>
         </div>
       </form>
-      <div class="flex flex-wrap-mx-3 mb-2 z-40">
+      <div class="flex flex-wrap mb-2 z-1">
         <%= render_filter_options(@socket, @blend_types, gettext("Blend Type"), "blend_type_ids", @filter) %>
         <%= render_filter_options(@socket, @countries, gettext("Country"), "country_ids", @filter) %>
         <%= render_filter_options(@socket, @cuts, gettext("Cut"), "cut_ids", @filter) %>
