--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -1,4 +1,4 @@
-<div class="flex mt-10 justify-center" x-data="{blend: false, blend_type_ids: false, country_ids: false, cut_ids: false}">
+<div class="flex mt-10 justify-center" x-data="{showBlend: false, blend: {}, blend_type_ids: false, country_ids: false, cut_ids: false}">
   <div class="flex flex-col items-center justify-center m-5 overflow-hidden w-full">
     <div class="flex flex-col justify-center w-full">
       <form class="p-3" phx-submit="search">
@@ -20,9 +20,9 @@
         </div>
       </form>
       <div class="flex flex-wrap mb-2 z-1">
-        <%= render_filter_options(@socket, @blend_types, gettext("Blend Type"), "blend_type_ids", @filter) %>
-        <%= render_filter_options(@socket, @countries, gettext("Country"), "country_ids", @filter) %>
-        <%= render_filter_options(@socket, @cuts, gettext("Cut"), "cut_ids", @filter) %>
+        <%= live_component @socket, TobaccosClubWeb.FilterComponent, elements: @blend_types, name: gettext("Blend Type"), input_name: "blend_type_ids", filter: @filter %>
+        <%= live_component @socket, TobaccosClubWeb.FilterComponent, elements: @countries, name: gettext("Country"), input_name: "country_ids", filter: @filter %>
+        <%= live_component @socket, TobaccosClubWeb.FilterComponent, elements: @cuts, name: gettext("Cut"), input_name: "cut_ids", filter: @filter %>
       </div>
       <div class="mt-4 px-3 flex flex-wrap space-x-2 space-y-1">
         <%= for item <- @selected_filters do %>
@@ -42,7 +42,7 @@
             <%= for blend <- @blends do %>
               <tr class="hover:bg-orange-100">
                 <td class="py-4 px-6 border-b border-gray-200 text-orange-700 text-lg">
-                  <a href="#" x-on:click="blend = <%= schema_to_json(blend) %>"><%= blend.name %></a>
+                  <a href="#" phx-click="show_blend" phx-value-id="<%= blend.id %>" x-on:click="showBlend = true"><%= blend.name %></a>
                 </td>
                 <td class="hidden py-4 px-6 border-b border-gray-200 text-orange-700 text-lg text-right">
                   <span><%= link "Edit", to: "#" %></span>
@@ -55,9 +55,9 @@
       <%= render_pagination_navigation(@socket, @pagination_info, TobaccosClubWeb.BlendsLive.Index) %>
     </div>
   </div>
-  <div x-show="blend" @click.away="blend = false" class="bg-white w-2/5 shadow-2xl">
+  <div x-show="showBlend" @click.away="showBlend = false" class="bg-white w-2/5 shadow-2xl">
     <div class="flex justify-end border-b-2 p-3">
-      <a href="#" @click="blend = false">
+      <a href="#" @click="showBlend = false">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -68,33 +68,35 @@
         </svg>
       </a>
     </div>
-    <h3 x-text="blend.name" class="text-4xl text-yellow-800 text-left p-2 mt-2"></h3>
-    <div class="text-yellow-800 px-2">
-      <%= gettext("By") %>: <span x-text="blend.brand"></span>
-    </div>
-    <div class="px-3 mt-3">
-      <p><%= gettext("Blended By") %></p>
-      <p x-text="blend.blended_by"></p>
-    </div>
-    <div class="px-3 mt-3">
-      <p><%= gettext("Blend Type") %></p>
-      <p x-text="blend.blend_type"></p>
-    </div>
-    <div class="px-3 mt-3">
-      <p><%= gettext("Cut") %></p>
-      <p x-text="blend.cut"></p>
-    </div>
-    <div class="px-3 mt-3">
-      <p><%= gettext("Contents") %></p>
-      <p x-text="blend.contents"></p>
-    </div>
-    <div class="px-3 mt-3">
-      <p><%= gettext("Country") %></p>
-      <p x-text="blend.country"></p>
-    </div>
-    <div class="px-3 mt-3">
-      <p><%= gettext("Production") %></p>
-      <p x-text="blend.production"></p>
-    </div>
+    <%= if @blend do %>
+      <h3 class="text-4xl text-yellow-800 text-left p-2 mt-2"><%= @blend.name %></h3>
+      <div class="text-yellow-800 px-2">
+        <%= gettext("By") %>: <span><%= @blend.brand.name %></span>
+      </div>
+      <div class="px-3 mt-3">
+        <p><%= gettext("Blended By") %></p>
+        <p><%= @blend.blended_by %></p>
+      </div>
+      <div class="px-3 mt-3">
+        <p><%= gettext("Blend Type") %></p>
+        <p><%= @blend.blend_type.name %></p>
+      </div>
+      <div class="px-3 mt-3">
+        <p><%= gettext("Cut") %></p>
+        <p><%= @blend.cut.name %></p>
+      </div>
+      <div class="px-3 mt-3">
+        <p><%= gettext("Contents") %></p>
+        <p><%= @blend.contents %></p>
+      </div>
+      <div class="px-3 mt-3">
+        <p><%= gettext("Country") %></p>
+        <p><%= Gettext.gettext(TobaccosClubWeb.Gettext, @blend.country.name) %></p>
+      </div>
+      <div class="px-3 mt-3">
+        <p><%= gettext("Availability") %></p>
+        <p><%= @blend.production %></p>
+      </div>
+    <% end %>
   </div>
 </div>
