--- a/lib/tobaccos_club_web/live/blends_live/index.html.leex
+++ b/lib/tobaccos_club_web/live/blends_live/index.html.leex
@@ -55,9 +55,9 @@
       <%= render_pagination_navigation(@socket, @pagination_info, TobaccosClubWeb.BlendsLive.Index) %>
     </div>
   </div>
-  <div x-show="showBlend" @click.away="showBlend = false" class="bg-white sm:w-2/5 shadow-2xl absolute  py-2">
+  <div x-show.transition.duration.200ms="showBlend" class="bg-white border border-gray-100 w-5/6 sm:w-2/5 shadow-2xl absolute py-2">
     <div class="flex justify-end border-b-2 p-3">
-      <a href="#" @click="showBlend = false">
+      <a href="#" @click="showBlend = false" phx-click="show_blend" phx-value-id="">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
