--- a/lib/tobaccos_club_web/templates/layout/live.html.leex
+++ b/lib/tobaccos_club_web/templates/layout/live.html.leex
@@ -1,5 +1,5 @@
 <main role="main" class="container">
-  <p class="alert alert-info" role="alert"
+  <p class="alert m-2 bg-yellow-100 text-yellow-800" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
 
