--- a/lib/tobaccos_club_web/templates/layout/root.html.leex
+++ b/lib/tobaccos_club_web/templates/layout/root.html.leex
@@ -38,6 +38,7 @@
           </g>
         </svg>
       </div>
+      <%= render "_user_menu.html", assigns %>
     </nav>
     <div class="container mx-auto">
       <%= @inner_content %>
