--- a/lib/tobaccos_club_web/templates/layout/_user_menu.html.eex
+++ b/lib/tobaccos_club_web/templates/layout/_user_menu.html.eex
@@ -1,10 +1,10 @@
 <ul>
 <%= if @current_user do %>
   <li><%= @current_user.email %></li>
-  <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
-  <li><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
+  <li><%= link dgettext("users", "Settings"), to: Routes.user_settings_path(@conn, :edit) %></li>
+  <li><%= link dgettext("users", "Log out"), to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
 <% else %>
-  <li><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></li>
-  <li><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></li>
+  <li><%= link dgettext("users", "Register"), to: Routes.user_registration_path(@conn, :new) %></li>
+  <li><%= link dgettext("users", "Log in"), to: Routes.user_session_path(@conn, :new) %></li>
 <% end %>
 </ul>
