--- a/lib/tobaccos_club_web/templates/user_reset_password/new.html.eex
+++ b/lib/tobaccos_club_web/templates/user_reset_password/new.html.eex
@@ -10,7 +10,7 @@
 
     <div>
       <%= submit dgettext("users", "Send instructions to reset password"),
-          class: "self-end inline-flex py-2 px-4 mb-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-800 hover:bg-orange-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-800" %>
+          class: "self-end inline-flex py-2 px-4 mb-4 mt-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-800 hover:bg-orange-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-800" %>
     </div>
   <% end %>
 
