--- a/lib/tobaccos_club_web/templates/user_confirmation/new.html.eex
+++ b/lib/tobaccos_club_web/templates/user_confirmation/new.html.eex
@@ -1,15 +1,20 @@
-<h1>Resend confirmation instructions</h1>
+<div class="flex flex-col items-center">
+  <h1 class="m-4 text-2xl font-bold text-yellow-900"><%= dgettext("users", "Resend confirmation instructions") %></h1>
 
-<%= form_for :user, Routes.user_confirmation_path(@conn, :create), fn f -> %>
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+  <%= form_for :user, Routes.user_confirmation_path(@conn, :create), [class: "flex flex-col items-center w-full"], fn f -> %>
+    <div class="flex flex-col mb-2 w-1/3">
+      <%= label f, :email, dgettext("users", "Email") %>
+      <%= email_input f, :email, required: true %>
+    </div>
 
-  <div>
-    <%= submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
+    <div>
+      <%= submit "Resend confirmation instructions",
+          class: "self-end inline-flex py-2 px-4 mb-4 mt-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-800 hover:bg-orange-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-800" %>
+    </div>
+  <% end %>
 
-<p>
-  <%= link "Register", to: Routes.user_registration_path(@conn, :new) %> |
-  <%= link "Log in", to: Routes.user_session_path(@conn, :new) %>
-</p>
+  <p>
+    <%= link dgettext("users", "Register"), to: Routes.user_registration_path(@conn, :new) %> |
+    <%= link dgettext("users", "Log in"), to: Routes.user_session_path(@conn, :new) %>
+  </p>
+</div>
