--- a/lib/tobaccos_club_web/templates/user_confirmation/new.html.eex
+++ b/lib/tobaccos_club_web/templates/user_confirmation/new.html.eex
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-      <%= submit "Resend confirmation instructions",
+      <%= submit dgettext("users", "Resend confirmation instructions"),
           class: "self-end inline-flex py-2 px-4 mb-4 mt-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-800 hover:bg-orange-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-800" %>
     </div>
   <% end %>
